<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    tools:context=".activities.ResetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:src="@drawable/reset_password_bg"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/green"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/nunito_semibold"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/msg_forgot_password"
            android:textColor="@color/green"
            android:textSize="18dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:textColorHint="@color/green">
            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_email_green"
                android:drawablePadding="@dimen/spacing_normal"
                android:textColor="@color/status_bar_back"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColorHint="@color/background_super_dark"
                app:fontFamily="@font/nunito_semibold"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nunito_semibold"
            android:background="@drawable/round_corner_button_login"
            android:text="@string/btn_reset_password"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:onClick="resetPasswordButton"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/green"
            android:onClick="goBackButton"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>