<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_ui"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".activities.LoginActivity">

    <!-- material design LinearLayout -->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:src="@mipmap/hotel_room_round"/>

        <TextView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="22sp"
            android:textStyle="italic"
            android:typeface="normal"
            android:textColor="@color/colorWhite"/>

        <!-- TextInputLayout and AppCompatEdiText for Username -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:textAlignment="center"
            android:textColorHint="@color/colorWhite">
            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <!-- TextInputLayout and AppCompatEdiText for Password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:textAlignment="center"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite">
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

    <!-- Login Button  -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonLogin"
        android:layout_marginTop="40dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_below="@+id/login_cardView"
        android:text="@string/login"
        android:textColor="@color/colorVioletDeep"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textAlignment="center"
        android:background="@drawable/round_corner_button_signup"
        android:onClick="onLoginButtonClick"/>

        <!-- Button as a Link to the Sign Up Page -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonLinkSignUp"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_below="@+id/appCompatButtonLogin"
        android:text="@string/sign_up_link"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:textAlignment="center"
        android:background="@null"
        android:onClick="onSignUpLinkClick"/>

        <!-- Link to the user login page -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonAdminLoginLink"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_below="@+id/appCompatButtonLogin"
            android:text="@string/admin_login_link"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textAlignment="center"
            android:background="@null"
            android:onClick="onAdminLoginButtonLinkClick"/>

</android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>