<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditCredentialsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:minHeight="?android:attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:background="@color/green">
    </android.support.v7.widget.Toolbar>

    <!-- material design LinearLayout -->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/update_credentials"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/green"/>

        <!-- TextInputLayout and AppCompatEdiText for Username -->
        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/toolbar"
            android:id="@+id/textInputLayoutRoomNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:textAlignment="center"
            android:textColorHint="@color/green">
            <EditText
                android:id="@+id/editTextRoomNumber"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_person_outline_green_24dp"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <!-- TextInputLayout and AppCompatEdiText for Password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutRoomNumber"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:textAlignment="center"
            android:textColorHint="@color/green"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/green">
            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/green"
                android:drawableLeft="@drawable/ic_lock_outline_green_24dp"
                android:textColorHint="@color/colorVioletDeep"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Delete Room Button  -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonDelete"
            android:layout_marginTop="50dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_below="@+id/textInputLayoutPrice"
            android:text="@string/update_text"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAlignment="center"
            android:background="@drawable/round_corner_button_login"
            android:onClick="onUpdateButtonClick"
            tools:ignore="OnClick" />

    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>