<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".activities.AdminLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/login_ui"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/admin_icon_background"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/white_greyish"
        app:cardCornerRadius="@dimen/round_corner_radius"
        app:cardElevation="@dimen/activity_horizontal_margin">

        <!-- TextInputLayout and AppCompatEdiText for Email -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:textAlignment="center"
            android:textColorHint="@color/colorDeepPurple"
            app:passwordToggleEnabled="true">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/appCompatEditTextEmail"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp_1"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorDeepPurple"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <!-- TextInputLayout and AppCompatEdiText for Password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:orientation="vertical"
            android:textAlignment="center"
            android:textColorHint="@color/colorDeepPurple"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorVioletDeep">
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorDeepPurple"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp_1"
                android:hint="@string/hint_password"
                android:inputType="text|numberPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonLogin"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@+id/login_cardView"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:background="@drawable/round_corner_button_login"
        android:onClick="onLoginButtonClick"/>

    <!-- Link to the user login page -->
    <android.support.v7.widget.AppCompatButton
    android:id="@+id/appCompatButtonLinkSignUp"
    android:layout_marginTop="20dp"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:layout_below="@+id/appCompatButtonLogin"
    android:text="@string/login_link"
    android:textColor="@color/materialGreen"
    android:textSize="16sp"
    android:textAllCaps="false"
    android:textStyle="bold"
    android:textAlignment="center"
    android:background="@null"
    android:onClick="onLoginButtonLinkClick"/>


</RelativeLayout>