<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddRoomsActivity">

    <!-- material design LinearLayout -->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <!--<ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:src="@mipmap/room_round"/> -->


        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp">
        <!--TextView View for Candidate's Picture-->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewPicture"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/room_image"
            android:textSize="19sp"
            android:textColor="@color/green"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="4dp"/>

        <!--ImageButton to select candidate Picture from gallery-->
        <ImageButton
            android:id="@+id/imageBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="@mipmap/profile_icon_round"
            android:layout_weight="0"
            android:minHeight="130dp"
            android:minWidth="130dp"
            android:onClick="onSelectImage"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>
        </RelativeLayout>

    <!-- TextInputLayout and AppCompatEdiText for Username -->
    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/toolbar"
        android:id="@+id/textInputLayoutRoomNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        android:textColorHint="@color/green">
        <EditText
            android:id="@+id/editTextRoomNumber"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_room_drawable_left_black_24dp"
            android:drawablePadding="@dimen/spacing_normal"
            android:textColor="@color/green"
            android:textColorHint="@color/green"
            android:hint="@string/room_number"
            android:inputType="text"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <!-- TextInputLayout and AppCompatEdiText for Price -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutUsername"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        android:textColorHint="@color/green">
        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/green"
            android:textColorHint="@color/green"
            android:drawableLeft="@drawable/ic_payment_drawable_left_24dp"
            android:drawablePadding="@dimen/spacing_normal"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Add Button  -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonLogin"
        android:layout_marginTop="50dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_below="@+id/textInputLayoutPassword"
        android:text="@string/text_add"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textAlignment="center"
        android:background="@drawable/round_corner_button_login"
        android:onClick="onAddRoomButtonClick"/>

    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>